integration-tests/tests/integration/snapshots/integration__archive_unsupported_build_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
snapshot_kind: text
---
  error: predicate not allowed in `archive-filter` expressions
   ╭────
 1 │ test(sample_test)
   ·      ─────┬─────
   ·           ╰── test() predicates are not supported while archiving
   ╰────

error: failed to parse filterset
